# rust-api-demo

./: Cargo.toml  rust-toolchain
src/: main.rs
src/models/: mdlTodo.rs  mdl_todo.rs  mod.rs
src/server/: main.rs  routes.rs
