[package]
name = "sample_api"
version = "0.1.0"
authors = ["ISSEI KARIYA <issei.kariya@zerobillbank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4", features = ["json"] }
serde = "1.0.106"
serde_json = "1.0.52"